NXP-5847 - Nuxeo java launcher; added JBoss specific system properties